--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -5,13 +5,13 @@ Homepage.
 
 <ul>
     <li>
-        <a href="/login">Login</a>
+        <a href="./login">Login</a>
     </li>
     <li>
-        <a href="/logout">Logout</a>
+        <a href="./logout">Logout</a>
     </li>
     <li>
-        <a href="/cms">CMS</a>
+        <a href="./cms">CMS</a>
     </li>
 </ul>
 {% endblock %}
