--- a/src/AppBundle/Resources/public/default.css
+++ b/src/AppBundle/Resources/public/default.css
@@ -3,5 +3,10 @@
 }
 
 .logs li {
-    font-size: 10px;
+    font-size: 20px;
+}
+
+.records_list *, .record_properties *, .record_actions * {
+    font-size: 20px !important;
+    border: none !important;
 }
