--- a/src/AppBundle/Resources/views/Banner/show.html.twig
+++ b/src/AppBundle/Resources/views/Banner/show.html.twig
@@ -4,7 +4,7 @@
 <h2>Banner (id: {{ entity. id }})</h2>
 
 <p>
-    <img src="{{ webroot }}{{ entity.webPath }}?id=1" />
+    <img src="{{ signedUrl }}" />
 </p>
 
 <h3>Logs</h3>
