--- a/src/AppBundle/Resources/views/Banner/index.html.twig
+++ b/src/AppBundle/Resources/views/Banner/index.html.twig
@@ -8,6 +8,8 @@
             <tr>
                 <th>Id</th>
                 <th>Title</th>
+                <th>Category</th>
+                <th>Brand</th>
                 <th>Actions</th>
             </tr>
         </thead>
@@ -16,6 +18,8 @@
             <tr>
                 <td><a href="{{ path('banner_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                 <td>{{ entity.title }}</td>
+                <td>{{ entity.category }}</td>
+                <td>{{ entity.brand }}</td>
                 <td>
                 <ul>
                     <li>
