--- a/src/AppBundle/Resources/views/Brand/index.html.twig
+++ b/src/AppBundle/Resources/views/Brand/index.html.twig
@@ -8,7 +8,8 @@
         <tr>
             <th>Id</th>
             <th>Name</th>
-            <th>Actions</th>
+            <th>Banner</th>
+            <th>&nbsp;</th>
         </tr>
     </thead>
     <tbody>
@@ -16,6 +17,7 @@
         <tr>
             <td><a href="{{ path('brand_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
             <td>{{ entity.name }}</td>
+            <td>{{ entity.banners|length }}</td>
             <td>
             <ul>
                 <li>
