--- a/src/AppBundle/Resources/views/Category/index.html.twig
+++ b/src/AppBundle/Resources/views/Category/index.html.twig
@@ -9,7 +9,8 @@
                 <th>Id</th>
                 <th>Title</th>
                 <th>Slug</th>
-                <th>Actions</th>
+                <th>Banner</th>
+                <th>&nbsp;</th>
             </tr>
         </thead>
         <tbody>
@@ -18,6 +19,7 @@
                 <td><a href="{{ path('category_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                 <td>{{ entity.title }}</td>
                 <td>{{ entity.slug }}</td>
+                <td>{{ entity.banners|length }}</td>
                 <td>
                 <ul>
                     <li>
