--- a/src/AppBundle/Resources/views/Category/show.html.twig
+++ b/src/AppBundle/Resources/views/Category/show.html.twig
@@ -1,30 +1,36 @@
 {% extends 'AppBundle::base.html.twig' %}
 
 {% block body -%}
-    <h2>Category</h2>
+<h2>Category</h2>
 
-    <table class="record_properties">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ entity.id }}</td>
-            </tr>
-            <tr>
-                <th>Title</th>
-                <td>{{ entity.title }}</td>
-            </tr>
-            <tr>
-                <th>Slug</th>
-                <td>{{ entity.slug }}</td>
-            </tr>
-        </tbody>
-    </table>
+<table class="record_properties">
+    <tbody>
+        <tr>
+            <th>Id</th>
+            <td>{{ entity.id }}</td>
+        </tr>
+        <tr>
+            <th>Title</th>
+            <td>{{ entity.title }}</td>
+        </tr>
+        <tr>
+            <th>Slug</th>
+            <td>{{ entity.slug }}</td>
+        </tr>
+    </tbody>
+</table>
 
-        <ul class="record_actions">
+<hr />
+
+<h3>Random Banner(id: {{ banner.id }})</h3>
+
+<p>
+    <img src="{{ signedUrl }}" />
+</p>
+
+<ul class="record_actions">
     <li>
-        <a href="{{ path('category') }}">
-            Back to the list
-        </a>
+        <a href="{{ path('category') }}"> Back to the list </a>
     </li>
 </ul>
 {% endblock %}
