random banner on brand details page

--- a/src/AppBundle/Resources/views/Brand/show.html.twig
+++ b/src/AppBundle/Resources/views/Brand/show.html.twig
@@ -16,6 +16,14 @@
     </tbody>
 </table>
 
+<hr />
+
+<h3>Random Banner(id: {{ banner.id }})</h3>
+
+<p>
+    <img src="{{ signedUrl }}" />
+</p>
+
 <ul class="record_actions">
     <li>
         <a href="{{ path('brand') }}"> Back to the list </a>
