--- a/src/Application/Sonata/UserBundle/Resources/views/Registration/register.html.twig
+++ b/src/Application/Sonata/UserBundle/Resources/views/Registration/register.html.twig
@@ -1,3 +1,3 @@
 {% block fos_user_content %}
-{% include "FOSUserBundle:Registration:register_content.html.twig" %}
+{# include "FOSUserBundle:Registration:register_content.html.twig" #}
 {% endblock fos_user_content %}
