--- a/src/AppBundle/Resources/views/Banner/index.html.twig
+++ b/src/AppBundle/Resources/views/Banner/index.html.twig
@@ -9,6 +9,7 @@
             <tr>
                 <th>Id</th>
                 <th>Title</th>
+                <th>Campaign</th>
                 <th>Category</th>
                 <th>Brand</th>
                 <th>Views</th>
@@ -22,6 +23,7 @@
             <tr id="entity-{{ entity.id }}">
                 <td><a href="{{ path('banner_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                 <td class="label">{{ entity.title }}</td>
+                <td>{{ entity.campaign }}</td>
                 <td>{{ entity.category }}</td>
                 <td>{{ entity.brand }}</td>
                 <td class="count">{{ entity.logs|length }}</td>
