--- a/src/AppBundle/Resources/views/Campaign/embed.html.twig
+++ b/src/AppBundle/Resources/views/Campaign/embed.html.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Humancredit - Banner {{ banner.id }}</title>
+        <title>Humancredit - Campaign {{ entity.id }} - Banner {{ banner.id }}</title>
         <style type="text/css">
             * {
                 margin: 0;
