--- a/src/AppBundle/Resources/views/Campaign/show.html.twig
+++ b/src/AppBundle/Resources/views/Campaign/show.html.twig
@@ -1,7 +1,7 @@
 {% extends 'AppBundle::base.html.twig' %}
 
 {% block body -%}
-<h2>Brand</h2>
+<h2>Campaign</h2>
 
 <table class="record_properties">
     <tbody>
@@ -10,8 +10,12 @@
             <td>{{ entity.id }}</td>
         </tr>
         <tr>
-            <th>Name</th>
-            <td>{{ entity.name }}</td>
+            <th>Title</th>
+            <td>{{ entity.title }}</td>
+        </tr>
+        <tr>
+            <th>Slug</th>
+            <td>{{ entity.slug }}</td>
         </tr>
     </tbody>
 </table>
@@ -73,7 +77,7 @@
 
 <ul class="record_actions">
     <li>
-        <a href="{{ path('brand') }}"> Back to the list </a>
+        <a href="{{ path('campaign') }}"> Back to the list </a>
     </li>
 </ul>
 {% endblock %}
